# ddw

./: .gitignore  README.md  pyproject.toml
didiw/: .gitignore  README.md  manage.py
didiw/didiw/: asgi.py  settings.py  urls.py  wsgi.py
didiw/didiwei/: manage.py  requirements.txt
didiw/didiwei/burp/: apps.py  models.py  tasks.py
didiw/didiwei/didiwei/: __init__.py  asgi.py  celeryconfig.py  settings.py  urls.py  wsgi.py
didiw/didiwei/dns/: models.py
didiw/dnsapp/: admin.py  apps.py  models.py
didiw/dwscan/: admin.py  apps.py  models.py  scanner.py
