[tool.poetry]
name = "ddw"
version = "0.1.0"
description = ""
authors = ["seaung <seaung.c0m7de@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.12"
django-simpleui = "^2022.3.19"
python-masscan = "^0.1.6"
nmap = "^0.0.1"
dnspython = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
